Header hamburguesa, background foto, h1 con CTA

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+    <title>GiuRamirez</title>
+</head>
+<body>
+    <header>
+        <input type="checkbox"/>
+        <a href="#">Home</a>
+        <a href="#">Portafolio</a>
+        <a href="#">Contactos</a>
+        <a href="#">Servicios</a>
+    </header>
+    <main>
+        <section class="content-cta">
+            <h1>Creando una comunidad de emprendedores responsables con su entorno.
+                Tienes un objetivo?
+            </h1>
+            <button class="btn">
+                Vamos a conseguirlo!
+            </button>
+        </section>
+
+    </main>
+</body>
+</html>
