Modificando el header

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="css/landscape.css" media="screen and (min-width: 480px)">
     <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1024px)">
+    <link rel="stylesheet" href="css/icomoon/style.css">
     <title>GiuRamirez</title>
 </head>
 <body>
     <header>
-        <section>
-            <input type="checkbox" id="menu-btn"/>
+        <section class="content-section-icon">
+            <i class="icon-menu menu-btn"></i>
             <nav class="content-menu">   
                 <ul>
                     <li><a href="#">Herramientas</a></li>
@@ -37,7 +38,7 @@
                 ¿Qué tipo de website necesita mi marca?
             </button>
         </section>
-        <section class="content-servicios">
+        <!-- <section class="content-servicios">
             <h2>Crecer tu marca es un proceso, y hay muchos factores involucrados,
                 enlistémoslos y crezcamos juntos.
             </h2>
@@ -72,8 +73,8 @@
                     <button class="cta-web">¡A crear!</button>
                 </span>
             </div>
-        </section>
-        <section class="content-bio">
+        </section> -->
+        <!-- <section class="content-bio">
             <h1>Un poco de mí</h1>
             <h2>Una pequena biografía profesional.
             </h2>
@@ -132,8 +133,8 @@
                 b. Desarrollo Web.
                 c. Marketing Digital. 
             </p>
-        </section>
-        <section class="content-blog">
+        </section> -->
+        <!-- <section class="content-blog">
             <div class="content-blog-title">
                 <h2>La resolución a tus dudas de emprendimiento
                     las encontrarás aquí:
@@ -143,7 +144,7 @@
                 <button>Modelos financieros</button>
                 <button>Comunicación de marca</button>
             </div>
-        </section>
+        </section> -->
         <section class="content-contact">
             <div class="content-contact-meet">
                 <a href="" class="">Correo electrónico</a>
