Botón del header arreglado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header>
         <section class="content-section-icon">
-            <i class="icon-menu menu-btn"></i>
+            <input type="checkbox" id="menu-btn">
+            <label for="menu-btn"><i class="icon-menu menu-btn"></i></label>
             <nav class="content-menu">   
                 <ul>
                     <li><a href="#">Herramientas</a></li>
