Arreglada la pagina de inicio, el header y el menu, el siguiente paso es arreglar el footer con mi foto y contactos

--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
     </header>
     <main>
         <section class="content-tools">
-            <h1>Creo herramientas para emprendedores responsables con su entorno:</h1>
-            <button class="btn-fin">
-                ¿Tu idea o negocio es rentable?
-            </button>
-            <button class="btn-mkt">
-                ¿Tu marca está creciendo con el Marketing que llevas?
-            </button>
-            <button class="btn-dev">
-                ¿Qué tipo de website necesita mi marca?
-            </button>
+            <h1>Herramientas para emprendedores responsables con su entorno:</h1>
+            <div class="content-btn">
+                <a href="#" class="btn-fin">
+                    ¿Tu idea o negocio es rentable?
+                </a>
+                <a href="#" class="btn-mkt">
+                    ¿Tu marca crece con el Marketing que llevas?
+                </a>
+                <a href="#" class="btn-dev">
+                    ¿Mi marca necesita un sitio web?
+                </a>
+            </div>
         </section>
         <!-- <section class="content-servicios">
             <h2>Crecer tu marca es un proceso, y hay muchos factores involucrados,
@@ -177,5 +179,6 @@
         </nav>
     </div>
     </footer>
+    <script src="marca.js"></script>
 </body>
 </html>
