Trabajos en tarjeta de presentacion y hover de botones, luego hay que trabajar en los botones de la tarjeta de presentacion y el footer

--- a/index.html
+++ b/index.html
@@ -149,17 +149,42 @@
             </div>
         </section> -->
         <section class="content-contact">
+            <section class="content-cap-pic">
+                <figure class="content-pic">
+                    <img src="/css/pics/yo.png" alt="Foto del creador de la página">
+                </figure>
+                <span class="greetings-box">
+                    <p>¡Hola, soy Giuseppe!</p>
+                </span>
+                <span class="caption-box">
+                    <p>Financiero de profesión con conocimientos en Desarrollo Web (HTML, CSS y Javascript)
+                    y Growth Marketing.</p>
+                </span>
+            </section>
             <div class="content-contact-meet">
-                <a href="" class="">Correo electrónico</a>
-                <a href="" class="">Contacto</a>
-                <a href="" class="">Whatsapp, telegram</a>
+                <input type="button" value="Conectemos" id="conectemos-btn"/>
+                <label for="conectemos-btn"><i></i></label>
+                <nav>
+                    <ul>
+                        <li><a href="#" class="">Correo electrónico</a></li>
+                        <li><a href="#" class="">Contacto</a></li>
+                        <li><a href="#" class="">Whatsapp</a></li>
+                        <li><a href="#" class="">Telegram</a></li>
+                    </ul>
+                </nav>
             </div>
             <div class="content-contact-sm">
-                <a href="" class="">GitHub</a>
-                <a href="" class="">LinkedIn</a>
-                <a href="" class="">Instagram</a>
-                <a href="" class="">Facebook</a>
-                <a href="" class="">Tiktok</a>
+                <input type="button" value="Ó, ¡sígueme!" id="follow-btn"/>
+                <label for="follow-btn"><i></i></label>
+                <nav>
+                    <ul>
+                        <li><a href="#" class="">GitHub</a></li>
+                        <li><a href="#" class="">LinkedIn</a></li>
+                        <li><a href="#" class="">Instagram</a></li>
+                        <li><a href="#" class="">Facebook</a></li>
+                        <li><a href="#" class="">Tiktok</a></li>
+                    </ul>
+                </nav>
             </div>
         </section>
     </main>
