--- a/index.html
+++ b/index.html
@@ -162,27 +162,26 @@
                 </span>
             </section>
             <div class="content-contact-meet">
-                <input type="button" value="Conectemos" id="conectemos-btn"/>
-                <label for="conectemos-btn"><i></i></label>
-                <nav>
+                <input type="checkbox" id="conectemos-btn"/>
+                <label for="conectemos-btn"><span>Contactar a Giuseppe</span><i class="icon-circle-right icon-conect"></i></label>
+                <nav class="content-nav-contact">
                     <ul>
-                        <li><a href="#" class="">Correo electrónico</a></li>
-                        <li><a href="#" class="">Contacto</a></li>
-                        <li><a href="#" class="">Whatsapp</a></li>
-                        <li><a href="#" class="">Telegram</a></li>
+                        <li><a href="#" class="icon-mail"></a></li>
+                        <li><a href="#" class="icon-whatsapp"></a></li>
+                        <li><a href="#" class="icon-telegram"></a></li>
                     </ul>
                 </nav>
             </div>
             <div class="content-contact-sm">
-                <input type="button" value="Ó, ¡sígueme!" id="follow-btn"/>
-                <label for="follow-btn"><i></i></label>
-                <nav>
+                <input type="checkbox" id="follow-btn"/>
+                <label for="follow-btn">Conectar con Giuseppe<i class="icon-circle-right"></i></label>
+                <nav class="content-nav-follow">
                     <ul>
-                        <li><a href="#" class="">GitHub</a></li>
-                        <li><a href="#" class="">LinkedIn</a></li>
-                        <li><a href="#" class="">Instagram</a></li>
-                        <li><a href="#" class="">Facebook</a></li>
-                        <li><a href="#" class="">Tiktok</a></li>
+                        <li><a href="#" class="icon-github"></a></li>
+                        <li><a href="#" class="icon-linkedin"></a></li>
+                        <li><a href="#" class="icon-instagram"></a></li>
+                        <li><a href="#" class="icon-facebook2"></a></li>
+                        <li><a href="#" class="icon-twitter"></a></li>
                     </ul>
                 </nav>
             </div>
