Terminado parte 1 del proyecto en Portrait para celular

--- a/index.html
+++ b/index.html
@@ -188,20 +188,18 @@
         </section>
     </main>
     <footer>
-    <div>
-        <div>
+        <div class="content-copyright">
             <span>Copyright © 2020</span>  
-            <a rel="home" href="https://giuramirez.github.io"> Giuseppe Ramírez</a>
+            <a rel="home" href="https://giuramirez.github.io"> Giuseppe Ramírez </a>
             <blockquote>"Have the courage to seek the wisdom that will grant you power"</blockquote>
         </div>
-        <nav>
+        <nav class="content-politicas">
             <ul>
                 <li><a href="">Aviso Legal</a></li>
                 <li><a href="">Política de Privacidad</a></li>
                 <li><a href="">Política de Cookies</a></li>
             </ul>
         </nav>
-    </div>
     </footer>
     <script src="marca.js"></script>
 </body>
