--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <label for="menu-btn"><i class="icon-menu menu-btn"></i></label>
             <nav class="content-menu">   
                 <ul>
-                    <li><a href="#">Herramientas</a></li>
+                    <li><a href="#">Portafolio</a></li>
                     <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Un poco de mí</a></li>
+                    <li><a href="#">Herramientas</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contactos</a></li>
                 </ul>
